--- a/style.css
+++ b/style.css
@@ -128,7 +128,9 @@
         color:black;
     }
     .signup-container{
-        margin-left: 30px;    
+        margin-left: 30px; 
+        margin-top: 10px; 
+        margin-top: -50px;  
     }
     .actions-container {
         display: flex;
@@ -147,8 +149,8 @@
     .play-icon {
         background-color: darkblue;
         color: white;
-        width: 40px;
-        height: 40px;
+        width: 80px;
+        height: 60px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -206,7 +208,7 @@
     /*<!--Background-->*/
     .column-right{
         align-items: right;
-        margin-top: 50px;
+        margin-top: 10px;
         margin-left: 100px;
         align-content:right;
         max-width: fit-content;
@@ -218,7 +220,7 @@
     .column-left{
        padding-right: 100px;
       align-content: left;
-      margin-top: 60px;
+      margin-top: 5px;
     }
     .column-left h1{
         font-size: 80px;
@@ -228,14 +230,17 @@
     .column-left p{
         font-size: 30px;
         font-family: 'Times New Roman';
-        margin-top: 30px;
+        margin-top: -35px;
         text-align: left;
-        display:flex ;  
+        display:flex ; 
+        padding:10px 20px; 
+
 
     }
     .med1{
         display: flex;
         justify-content:center;
+        
   
     }
 
@@ -277,7 +282,7 @@
     /*<!--REVIEW-->*/
     .flex-container{
         background-color: rgb(175, 175, 175);
-        margin-top:150px;
+        margin-top:30px;
         font-size: 30px;
         border-radius: 70px;
         display: flex;
