--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 
-
      body{
         background-color: rgb(236, 253, 253);
         margin:20px 50px;
@@ -47,7 +46,7 @@
         justify-content: center;
       } 
       .menu ul li a:hover {
-        color: goldenrod;
+        color: red;
       }  
       .sign {
         display: flex;
@@ -69,74 +68,53 @@
       
       .sign .btn:hover {
         background-color: black;
-      }
-      
-      /* Responsive Media Queries */
-      @media (max-width: 980px) {
-        .navbar {
-          flex-direction: column;
-          text-align: center;
-        }
-      
-        .menu ul {
-          flex-direction: column;
-          padding: 0;
-        }
-      
-        .menu ul li {
-          margin: 10px 0;
-        }
-      
-        .sign {
-          flex-direction: column;
-          align-items: center;
-        }
-      
-        .sign .btn {
-          margin: 5px 0;
-        }
-      
-        .icon img {
-          width: 120px;
-        }
-      }
-      
-      @media (max-width: 480px) {
-        .navbar {
-          flex-direction: column;
-        }
-      
-        .menu ul {
-          padding: 10px 0;
-        }
-      
-        .menu ul li a {
-          font-size: 16px;
-        }
-      
-        .icon img {
-          width: 100px;
-        }
-      
+      } 
         .sign .btn {
           padding: 8px 16px;
           font-size: 14px;
         }
-      }
       
     ul li a:hover{
         color:black;
+
     }
-    .signup-container{
-        margin-left: 30px; 
-        margin-top: 10px; 
-        margin-top: -50px;  
+    .signup-container {
+      display: flex;
+      align-items: center;
+      margin-top: -120px;
+      marigin-bottom:10px;
+      width: 70%;
     }
+    
+    .email-input {
+      padding: 10px 20px;
+      border: 1px solid #ccc;
+      border-right: none;
+      border-radius: 4px 0 0 4px; /* Rounded left side */
+      font-size: 14px;
+      outline: none;
+      width: 300px; /* Adjust width as needed */
+    }
+    
+    .signup-button {
+      background-color: black;
+      color: white;
+      border: 1px solid black;
+      border-radius: 0 4px 4px 0; /* Rounded right side */
+      padding: 10px 20px;
+      cursor: pointer;
+      font-size: 14px;     
+    }
+    
+    .signup-button:hover {
+      background-color: #333;
+    }
+    
     .actions-container {
         display: flex;
         align-items: center;
         gap: 20px;
-        margin-top: 30px;
+        margin-top: 10px;
     }
     .play-video-container {
         display: flex;
@@ -147,10 +125,10 @@
         margin-left: 10px;
     }
     .play-icon {
-        background-color: darkblue;
+        background-color: black;
         color: white;
-        width: 80px;
-        height: 60px;
+        width: 40px;
+        height: 40px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -160,15 +138,13 @@
         color: black;
     }
     .btn{
-        border: 2px solid goldenrod;
         margin-top: 13px;
         color: white;
         font-size: 16px;
         border: none;
         border-radius: 0 4px 4px 0;
         padding: 8px 16px;
-        cursor: pointer;
-       
+        cursor: pointer;      
     }
     .btnn{
         background-color: black;
@@ -212,38 +188,36 @@
         margin-left: 100px;
         align-content:right;
         max-width: fit-content;
- 
     }
+
     #video1{
       max-height: 1000px;
     }
+
     .column-left{
        padding-right: 100px;
       align-content: left;
       margin-top: 5px;
     }
+
     .column-left h1{
         font-size: 80px;
-        color: darkblue;
-    
+        color: darkblue;  
     }
+
     .column-left p{
         font-size: 30px;
         font-family: 'Times New Roman';
-        margin-top: -35px;
+        margin-top: -55px;
         text-align: left;
         display:flex ; 
         padding:10px 20px; 
-
-
     }
+
     .med1{
         display: flex;
         justify-content:center;
-        
-  
     }
-
   
   /* Media Query for Small Screens (Mobile) */
   @media (max-width: 767px) {
@@ -284,91 +258,51 @@
         background-color: rgb(175, 175, 175);
         margin-top:30px;
         font-size: 30px;
-        border-radius: 70px;
+        border-radius: 50px;
         display: flex;
-      padding: 10px; 
-      align-content: center;
-      box-shadow: 3px 3px 4px black;
-      justify-content:space space-around;
+       padding: 25px 10px; 
+       box-shadow: 3px 3px 4px black;
+       justify-content:center;
+       max-height: 120px;
     }
     
     .stats{
         font-size: 20px;
-        border-left: 2px solid rgb(245, 245, 240);
-        padding: 0 5px;
+        border-left: 3px solid rgb(218, 221, 221);   
         color: #fff;
         align-items: center;
         text-align: center;
         width: 80%;
     }
+
     .stat{
-        font-size: 20px;
-        padding: 0 5px;
+        font-size: 20px;     
         color: #fff;
         align-items: center;
         text-align: center;
         width: 80%;
     }
+
     .stat p{
-        text-align:center;
-        margin-left:60px;
-        margin-top: 30px;
+        justify-content: center;   
+    }
+
+    .stats p{
+      justify-content: center;
+    }
+
+    .stat h3{
+        font-size: 30px;
+        color: black;
         justify-content: center;
     }
-    .stat h3{
-        font-weight: bold;
-        font-size: 30px;
-        color: black;
-    }
+
     .stats h3{
         font-size: 30px;
-        text-align: center;
+        justify-content: center;
         color: black;
     }
 
-@media (max-width: 1200px) {
-    .stat, .stats {
-        flex: 1 1 calc(33.333% - 20px); /* 3 items per row */
-    }
-}
-
-@media (max-width: 768px) {
-    .stat, .stats {
-        flex: 1 1 calc(50% - 20px); /* 2 items per row */
-    }
-}
-
-@media (max-width: 480px) {
-    .stat, .stats {
-        flex: 1 1 100%; /* 1 item per row */
-    }
-}
-
-
-
-  
-  /* Media Query for Small Screens (Mobile) */
-  @media (max-width: 767px) {
-    .stats-container {
-      flex-direction: column;
-      padding: 10px;
-      max-width: 100%;
-    }
-  
-    .stat h2 {
-      font-size: 1.8em;
-    }
-  
-    .stat p {
-      font-size: 1em;
-     justify-content: center;
-    }
-  
-    .stat {
-      margin-bottom: 15px;
-    }
-  }
-    
     /*<!--First Bar-->*/
     .services-section {
         text-align: center;
@@ -392,11 +326,11 @@
     
     .services-container {
         display: flex;
-        flex-wrap: wrap;
-      
+        flex-wrap: wrap;     
     }
+
     .service-box {
-        background-color: rgb(190, 192, 192);
+        background-color: rgb(218, 221, 221);
         border-radius: 2px;
         width: 260px;
         padding: 5px 5px;
@@ -404,6 +338,7 @@
         margin-left: 10px;
       box-shadow: 3px 3px 4px darkblue;
     }
+
     .service-box:hover {
         background-color: #fcfbfb;
     }
@@ -423,8 +358,7 @@
         font-size: 20px;
         margin-bottom: 5px;
         color:darkblue;
-        margin-top: -20px;
-    
+        margin-top: -20px;  
     }
     
     .service-box p {
@@ -487,37 +421,37 @@
     }
   }
     /*<!--second Bar-->*/
-
     .services-section1{
         text-align: center;
         padding: 20px 0px;
-        width: 95%;
-    
+        width: 95%;  
     }
+
     .services-section1 h2{
         font-weight: bold;
         font-size: 28px;
         margin-top:-18px ;
         margin-bottom: 20px;
     }
+
     .services-container1 {
         display: flex;
         justify-content:space-between;  
     }
     
     .service-box1 {
-        background-color:rgb(165, 163, 163);
+        background-color:rgb(218, 221, 221);
         border-radius: 8px;
         width: 150px;
         padding: 10px;
         text-align: center;
     }
+
     .service-box1:hover {
         background-color: darkblue;
     }
     
     .service-icon1 {
-     
         width: 80px;
         height: 80px;
         margin: 0 auto 20px auto;
@@ -527,10 +461,12 @@
         justify-content: center;
         font-size: 20px;
     }
+
     .service-box1 h3{
         color: white;
         font-size: 20px;
     }
+
     .service-box h3 {
         font-size: 20px;
         margin-bottom: 10px;
@@ -626,10 +562,9 @@
     }
   }
     /*<!--Fourth Bar-->*/
-    
     .Partners-section {
         padding: 20px 50px;
-        text-align: center;
+        justify-content:center;
     }
     
     .Partners-section h2 {
@@ -651,14 +586,15 @@
     }
     
     .patner-card {
-        background-color:rgb(158, 159, 160);
+        background-color:rgb(218, 221, 221);
         padding: 12px ;
         text-align: left;
         cursor: pointer;   
         width: 22%;
-        border-radius: 20px;
-    
+        max-height: 150px;
+        justify-content:center;
     }
+
     .partner-card:hover {
         background-color: #e7e4e4;
     }
@@ -667,105 +603,27 @@
         width:50%;
         border-radius: 8px;
         align-items:start;
-        margin-top: 5px;
-        margin-bottom: 0px;
+        margin-top: -15px;
+        margin-bottom: 5px;
     }
     
     .patner-card h3 {
         font-size: 20px; 
         font-weight: 600;
-        color: red;
-        margin-top: 5px;
-        margin-bottom: 30px;
-    
+        color: black;
+        margin-top: -25px;
+        margin-bottom: 5px;
     }
     
     .patner-card p {
         font-size: 14px;
         color: #050505;
-       
+       margin-top:5px;
         font-family: 'Times New Roman';
        justify-content: center;
     }
-    
-    /* Media Query for Large Screens */
-@media (min-width: 1200px) {
-    .Partners {
-      justify-content: space-between;
-    }
-  
-    h2 {
-      font-size: 2.5em;
-    }
-  
-    .patner-card {
-      max-width: 22%;
-    }
-  
-    h3 {
-      font-size: 1.8em;
-    }
-  
-    p {
-      font-size: 1.2em;
-    }
-  }
-  
-  /* Media Query for Medium Screens (Tablets) */
-  @media (min-width: 768px) and (max-width: 1199px) {
-    .Partners {
-      flex-direction: row;
-      justify-content: center;
-      flex-wrap: wrap;
-    }
-  
-    .patner-card {
-      max-width: 45%;
-      margin-bottom: 20px;
-    }
-  
-    h2 {
-      font-size: 2.2em;
-      text-align: center;
-    }
-  
-    h3 {
-      font-size: 1.6em;
-    }
-  
-    p {
-      font-size: 1.1em;
-    }
-  }
-  
-  /* Media Query for Small Screens (Mobile) */
-  @media (max-width: 767px) {
-    .Partners {
-      flex-direction: column;
-      align-items: center;
-    }
-  
-    .patner-card {
-      max-width: 90%;
-      margin-bottom: 20px;
-      padding: 15px;
-    }
-  
-    h2 {
-      font-size: 1.8em;
-      text-align: center;
-    }
-  
-    h3 {
-      font-size: 1.4em;
-    }
-  
-    p {
-      font-size: 1em;
-    }
-  }
+ 
      /*<!--How to oder-->*/
-
     .steps-container {
         display: flex;
         justify-content: space-around;
@@ -773,11 +631,13 @@
         margin-top: 20px;
         gap: 0px;
       }
+
        h2{
         font-weight: bold;
         text-align: center;
         margin-bottom: 0px;
       }
+
       .step {
         width: 170px;
         padding: 10px;
@@ -785,6 +645,7 @@
         box-shadow: 1px 2px 3px darkblue;
         border-radius: 8px;
       }
+
       .step img {
         width: 50px;
         height: 50px;
@@ -798,6 +659,7 @@
         margin-bottom: 10px;
         color: black;
       }
+
       .step-description {
         font-size: 14px;
         color: darkblue;
@@ -834,17 +696,19 @@
         height: 300px;
         margin-right: 150px;
         margin-top: 50px;
-        align-items: right;
-        
+        align-items: right;      
     }
+
     .text-section {
         width: 80%;  
     }
+
     h1 {
         font-size: 50px;
         color: darkblue;
         margin-top: -10px;
     }
+
     p {
         font-size: 20px;
         font-family: 'Times New Roman';
@@ -852,9 +716,9 @@
         margin-right: 40px;
         text-align: left;
         line-break: 5px;
-        display:flex ;
-       
+        display:flex ;    
     }
+
     button {
         background-color:rgb(12, 12, 12);
         color: white;
@@ -862,12 +726,13 @@
         border: none;
         border-radius: 10px;
         cursor: pointer;
-        margin-top: 10px;
-        
+        margin-top: 10px;  
     }
+
     button:hover {
         background-color: darkblue;
     }
+
     .image-section {
         width: 70%;
         height: 100px;
@@ -877,46 +742,7 @@
         line-break: auto;
         align-items: right;
     }
-
-    /* Large Screens */
-@media (min-width: 1200px) {
-    .container {
-      flex-direction: row;
-    }
   
-    .text-section h1 {
-      font-size: 3em;
-    }
-  
-    .text-section p {
-      font-size: 1.2em;
-    }
-  }
-  
-  /* Medium Screens (Tablets) */
-  @media (min-width: 768px) and (max-width: 1199px) {
-    .container {
-      flex-direction: column;
-      align-items: center;
-    }
-  
-    .text-section {
-      text-align: center;
-      padding: 15px;
-    }
-  
-    .text-section h1 {
-      font-size: 2.2em;
-    }
-  
-    .text-section p {
-      font-size: 1.1em;
-    }
-  
-    .image-section {
-      padding: 10px;
-    }
-  }
   
   /* Small Screens (Mobile) */
   @media (max-width: 767px) {
@@ -1002,38 +828,7 @@
     .content button:hover{
         background-color: black;
     }
-
  
-  /* Small Screens (Mobile) */
-  @media (max-width: 767px) {
-    .container1 {
-      flex-direction: column;
-      align-items: center;
-    }
-  
-    .content {
-      text-align: center;
-      padding: 10px;
-    }
-  
-    .content h1 {
-      font-size: 2em;
-    }
-  
-    .content p {
-      font-size: 1em;
-    }
-  
-    button {
-      width: 100%;
-      padding: 12px 0;
-      font-size: 1em;
-    }
-  
-    .image-placeholder img {
-      width: 90%;
-    }
-  }
      /*<!--TESTIMONIALS-->*/
     .testimonials-section {
         text-align: center;
@@ -1060,8 +855,8 @@
     }
     
     .testimonial-box {
-        background-color: rgb(107, 107, 105);
-        height: 170px;
+        background-color: rgb(216, 216, 213);
+        max-height: 170px;
         padding: 10px;
         margin: 10px 10px;
         width: 50%;
@@ -1086,77 +881,7 @@
         line-height: 1.6;
         margin-top: 5px;
     }
-    
-    /* Large Screens */
-@media (min-width: 1200px) {
-    .container1 {
-      flex-direction: row;
-    }
-  
-    .content h1 {
-      font-size: 3em;
-    }
-  
-    .content p {
-      font-size: 1.2em;
-    }
-  }
-  
-  /* Medium Screens (Tablets) */
-  @media (min-width: 768px) and (max-width: 1199px) {
-    .container1 {
-      flex-direction: column;
-      align-items: center;
-    }
-  
-    .content {
-      text-align: center;
-      padding: 15px;
-    }
-  
-    .content h1 {
-      font-size: 2.2em;
-    }
-  
-    .content p {
-      font-size: 1.1em;
-    }
-  
-    .image-placeholder {
-      margin-bottom: 20px;
-    }
-  }
-  
-  /* Small Screens (Mobile) */
-  @media (max-width: 767px) {
-    .container1 {
-      flex-direction: column;
-      align-items: center;
-    }
-  
-    .content {
-      text-align: center;
-      padding: 10px;
-    }
-  
-    .content h1 {
-      font-size: 2em;
-    }
-  
-    .content p {
-      font-size: 1em;
-    }
-  
-    button {
-      width: 100%;
-      padding: 12px 0;
-      font-size: 1em;
-    }
-  
-    .image-placeholder img {
-      width: 90%;
-    }
-  }
+
     /*<!--Register section-->*/   
     .register-section {
         background-color: rgb(34, 34, 34);
@@ -1177,10 +902,6 @@
         margin-top: 10px;
     }
     
-    .register-section strong {
-        color:darkblue;
-    }
-    
     .submit-button {
         background-color: white;
         color: red;
@@ -1188,10 +909,6 @@
         text-decoration: none;
         border-radius: 5px;
         font-size: 16px;
-    }
-    
-    .submit-button:hover {
-        background-color: greenyellow;
     }
     
     /* Base styles for the register section */
@@ -1213,43 +930,7 @@
     background-color: #0056b3;
 }
 
-/* Large screens (desktops) */
-@media (min-width: 992px) {
-    .register-section {
-        font-size: 18px;
-    }
-    
-    .submit-button {
-        font-size: 16px;
-    }
-}
-
-/* Medium screens (tablets) */
-@media (min-width: 768px) and (max-width: 991px) {
-    .register-section {
-        font-size: 16px;
-    }
-    
-    .submit-button {
-        font-size: 14px;
-    }
-}
-
-/* Small screens (phones) */
-@media (max-width: 767px) {
-    .register-section {
-        font-size: 14px;
-        padding: 15px;
-    }
-    
-    .submit-button {
-        font-size: 12px;
-        padding: 8px 16px;
-    }
-}
-
-    /*<!--THE LAST BIT-->*/
-
+/*<!--THE LAST BIT-->*/
     footer {
         background-color: #fdf9f9;
         padding: 30px 0;
@@ -1273,7 +954,6 @@
         margin-left: 60px;
     }
 
-    
     .social-icons a {
         font-size: 30px; /* Adjust icon size */
         text-decoration: none;
@@ -1294,7 +974,6 @@
         margin: 10px;
         flex: 1;
         margin-top: 10px;
-    
     }
     
     .footer-middle h3, .footer-right h3 {
@@ -1335,8 +1014,7 @@
         padding: 10px ;
         background-color: #f1f1f1;
         margin-top: -60px;
-        font-size: 20px;
-    
+        font-size: 20px; 
     }
     
     .footer-bottom p {
@@ -1409,37 +1087,6 @@ footer {
     background-color: #e9ecef;
     font-size: 14px;
     justify-content: center;
-}
-
-/* Large screens (desktops) */
-@media (min-width: 992px) {
-    .footer-container {
-        flex-direction: row;
-    }
-    
-    .footer-left {
-        flex: 2;
-    }
-
-    .footer-middle, .footer-right {
-        flex: 1;
-    }
-}
-
-/* Medium screens (tablets) */
-@media (min-width: 768px) and (max-width: 991px) {
-    .footer-container {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .footer-left {
-        margin-bottom: 20px;
-    }
-
-    .footer-middle, .footer-right {
-        margin-bottom: 20px;
-    }
 }
 
 /* Small screens (phones) */
