--- a/style.css
+++ b/style.css
@@ -144,6 +144,8 @@
   .signup-container {
       flex-direction: column;
       width: 100%;
+      padding:20px 10px;
+  
   }
 
   .email-input, .signup-button {
@@ -249,12 +251,12 @@
     }
 
     .column-left h1{
-        font-size: 80px;
+        font-size: 79px;
         color: darkblue;  
     }
 
     .column-left p{
-        font-size: 25px;
+        font-size: 30px;
         font-family:'Arial';
         margin-top: -55px;
         text-align: left;
@@ -721,8 +723,8 @@
       }
 
       .step-description {
-        font-size: 14px;
-        color: darkblue;
+        font-size: 16px;
+        color: black;
         margin-bottom: 10px;
       }
 
